consolidated more graph view settings